--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/typeorm": "^8.0.1",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
+    "date-fns": "^2.23.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -41,6 +42,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@date-io/date-fns": "^2.11.0",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
